<resources>
    <string name="app_name" translatable="false">mgram Interaction</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">moLotus</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_save">Save to gallery</string>
    <string name="menu_share">Share</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_draft">Draft</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make mgram your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">mgram needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">mgram needs permission to view your contacts</string>
    <string name="main_permission_allow">Allow</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus" translatable="false">moLotus</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title" translatable="false">moLotus</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying moLotus?</string>
    <string name="rate_summary">Share some love and rate us on Google Play!</string>
    <string name="rate_okay">OKAY!</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty">This is the start of your conversation. Say something nice!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled for</string>
    <string name="compose_scheduled_future">Selected time must be in the future!</string>
    <string name="compose_scheduled_plus">You must unlock moLotus+ to use scheduled messaging</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_hint">Write a message…</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="take_a_video">Take a video</string>
    <string name="attach_video">Attach a video</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_sim_changed_toast">SIM %1$d (%2$s) selected</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="message_status_delivered">Delivered %s</string>
    <string name="message_status_failed">Failed to send. Tap to try again</string>
    <string name="info_title">Details</string>
    <string name="info_copied_address">Address copied</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_theme">Theme</string>
    <string name="info_archive">Archive</string>
    <string name="info_unarchive">Unarchive</string>
    <string name="info_block">Block</string>
    <string name="info_unblock">Unblock</string>
    <string name="info_delete">Delete conversation</string>
    <string name="gallery_error">Couldn\'t load media</string>
    <string name="gallery_toast_saved">Saved to gallery</string>
    <string name="backup_title">Backup and restore</string>
    <string name="backup_backing_up">Backing up messages</string>
    <string name="backup_restoring">Restoring from backup</string>
    <string name="backup_last">Last backup</string>
    <string name="backup_loading">Loading…</string>
    <string name="backup_never">Never</string>
    <string name="backup_restore_title">Restore</string>
    <string name="backup_restore_summary">Select a backup</string>
    <string name="backup_restore_error_plus">Please unlock moLotus to use backup and restore</string>
    <string name="backup_restore_dialog_title">Backups</string>
    <string name="backup_restore_dialog_summary" translatable="false">/moLotus/Backups</string>
    <string name="backup_restore_dialog_empty">No backups found</string>
    <string name="settings_category_qkreply">QK Reply</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_o_summary">Tap to customize</string>
    <string name="settings_notification_actions_title">Actions</string>
    <string name="settings_notification_action_1">Button 1</string>
    <string name="settings_notification_action_2">Button 2</string>
    <string name="settings_notification_action_3">Button 3</string>
    <string name="settings_notification_previews_title">Notification previews</string>
    <string name="settings_notification_wake_title">Wake screen</string>
    <string name="settings_vibration_title">Vibration</string>
    <string name="settings_ringtone_title">Sound</string>
    <string name="settings_qkreply_title">QK Reply</string>
    <string name="settings_qkreply_summary">Popup for new messages</string>
    <string name="settings_qkreply_tap_dismiss_title">Tap to dismiss</string>
    <string name="settings_qkreply_tap_dismiss_summary">Tap outside of the popup to close it</string>
    <string name="blocking_manager_qksms_title">moLotus</string>
    <string name="blocking_manager_qksms_summary">Built-in blocking functionality in moLotus</string>
    <string name="blocking_manager_call_control_title" translatable="false">Call Control</string>
    <string name="blocking_manager_call_control_summary">Automatically filter your calls and messages in one convenient place! Community IQ™ allows you to prevent unwanted messages from community known spammers</string>
    <string name="blocking_manager_sia_title" translatable="false">Should I Answer?</string>
    <string name="blocking_manager_sia_summary">Automatically filter messages from unsolicited numbers by using the \"Should I Answer\" app</string>
    <string name="about_version_title">Version</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_source_title">Source code</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_contact_title">Contact</string>
    <string name="about_license_title">License</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_developer" translatable="false">Moez Bhatti</string>
    <string name="about_source" translatable="false">https://github.com/moezbhatti/moLotus</string>
    <string name="about_changelog" translatable="false">https://github.com/moezbhatti/moLotus/releases</string>
    <string name="about_contact" translatable="false">moez@qklabs.com</string>
    <string name="about_license" translatable="false">GNU General Public License v3.0</string>
    <string name="about_copyright" translatable="false">© 2014–2019</string>
    <string name="changelog_title" translatable="false">New in moLotus</string>
    <string name="changelog_more" translatable="false">More</string>
    <string name="changelog_dismiss" translatable="false">Dismiss</string>
</resources>