<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/about_version_title"
            tools:summary="3.0.8" />

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/about_developer"
            app:title="@string/about_developer_title" />

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/about_source"
            app:title="@string/about_source_title" />

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/changelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/about_changelog"
            app:title="@string/about_changelog_title" />

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/about_contact"
            app:title="@string/about_contact_title" />

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/about_license"
            app:title="@string/about_license_title" />

        <com.sms.moLotus.common.widget.PreferenceView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/about_copyright"
            app:title="@string/about_copyright_title" />

    </LinearLayout>

</ScrollView>