<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <com.sms.moLotus.common.widget.RadioPreferenceView
            android:id="@+id/qksms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/blocking_manager_qksms_summary"
            app:title="@string/blocking_manager_qksms_title" />

        <com.sms.moLotus.common.widget.RadioPreferenceView
            android:id="@+id/callControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/blocking_manager_call_control_summary"
            app:title="@string/blocking_manager_call_control_title"
            app:widget="@layout/blocking_manager_list_option" />

        <com.sms.moLotus.common.widget.RadioPreferenceView
            android:id="@+id/shouldIAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/blocking_manager_sia_summary"
            app:title="@string/blocking_manager_sia_title"
            app:widget="@layout/blocking_manager_list_option" />

    </LinearLayout>

</ScrollView>
