<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/divider" />

    <com.sms.moLotus.common.widget.PreferenceView
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/ic_people_black_24dp"
        app:title="@string/info_name" />

    <com.sms.moLotus.common.widget.PreferenceView
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:title="@string/info_notifications" />

    <com.sms.moLotus.common.widget.PreferenceView
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_archive_white_24dp"
        app:title="@string/info_archive" />

    <com.sms.moLotus.common.widget.PreferenceView
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_block_white_24dp"
        app:title="@string/info_block" />

    <com.sms.moLotus.common.widget.PreferenceView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_delete_white_24dp"
        app:title="@string/info_delete" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/divider" />

</LinearLayout>
