<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.sms.moLotus.common.widget.QkTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/changelog_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/version"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:textSize="dialog" />

    <com.sms.moLotus.common.widget.QkTextView
        android:id="@+id/version"
        style="@style/TextSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/changelog"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_weight="1"
        tools:text="Version 3.6.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/changelog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:overScrollMode="ifContentScrolls"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/dismiss"
        app:layout_constraintTop_toBottomOf="@id/version"
        app:layout_constraintVertical_weight="0"
        tools:listitem="@layout/changelog_list_item" />

    <com.sms.moLotus.common.widget.QkTextView
        android:id="@+id/more"
        style="@style/TextSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/changelog_more"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dismiss"
        app:layout_constraintTop_toBottomOf="@id/changelog"
        app:layout_constraintVertical_weight="1" />

    <com.sms.moLotus.common.widget.QkTextView
        android:id="@+id/dismiss"
        style="@style/TextSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/changelog_dismiss"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changelog"
        app:layout_constraintVertical_weight="1"
        app:layout_goneMarginEnd="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
