<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sms.moLotus.feature.compose.ComposeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:background="@drawable/bg_chat"
        android:scaleType="fitXY" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessageList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/txtMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:stackFromEnd="true"
        tools:listitem="@layout/message_list_item_in" />

    <com.sms.moLotus.common.widget.QkTextView
        android:id="@+id/messagesEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/compose_messages_empty"
        android:textColor="?android:attr/textColorTertiary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="parent"
        app:textSize="secondary" />


    <com.sms.moLotus.common.widget.QkEditText
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/compose_hint"
        android:inputType="textLongMessage|textCapSentences|textMultiLine"
        android:maxLines="6"
        android:minHeight="44dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="2dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintStart_toStartOf="parent" />

    <com.sms.moLotus.common.widget.QkTextView
        android:id="@+id/counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@id/send"
        app:layout_constraintEnd_toEndOf="@id/send"
        app:layout_constraintStart_toStartOf="@id/send"
        app:textSize="tertiary"
        tools:text="108 / 2" />

    <ImageView
        android:id="@+id/imgSend"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/compose_send_cd"
        android:padding="10dp"
        app:tint="@color/tools_theme"
        android:src="@drawable/ic_send_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <include
        android:id="@+id/layoutHeader"
        layout="@layout/layout_header" />

</androidx.constraintlayout.widget.ConstraintLayout>